Table configuraciones {
  id integer [primary key, increment]
  nombre varchar [not null]
  descripcion text
  direccion varchar
  telefono varchar
  correo varchar
  web varchar
  logo varchar
  created_at timestamp
  updated_at timestamp
}

// ==========================================
// 1. GESTIÓN DE CICLOS Y CONVOCATORIAS
// ==========================================
Table ciclos {
  id bigint [pk, increment]
  nombre varchar [not null] // Ej: "Periodo 1/2026"
  estado varchar [default: 'ACTIVO', not null] // "ACTIVO", "CERRADO"
  fecha_inicio timestamp [null]
  fecha_fin timestamp [null]
  created_at timestamp [null]
  updated_at timestamp [null]
  deleted_at timestamp [null] // SoftDeletes
}

// ==========================================
// 2. GESTIÓN DE TEAMS (EQUIPOS / AULAS)
// ==========================================
Table teams {
  id bigint [pk, increment]
  nombre varchar [not null]
  ciclo_id bigint [ref: > ciclos.id, not null] // Relación con ciclos (cascade)
  logo varchar [null] // Ruta del archivo en storage
  created_at timestamp [null]
  updated_at timestamp [null]
  deleted_at timestamp [null] // SoftDeletes
}

// ==========================================
// 3. USUARIOS (Adaptado a Laravel + Spatie)
// ==========================================
Table users {
  id bigint [pk, increment]
  registro_universitario varchar [unique, not null] // Clave para el login
  name varchar [not null] // Nombre completo oficial
  alias varchar [unique, not null] // Obligatorio y único para la plataforma
  email varchar [unique, not null] // Obligatorio y único
  email_verified_at timestamp [null]
  password varchar [not null]
  avatar varchar [null] // Foto o insignia de perfil
  team_id bigint [ref: > teams.id, null] // Relación con equipos (set null)
  remember_token varchar [null]
  created_at timestamp [null]
  updated_at timestamp [null]
}

// ==========================================
// 4. BILLETERA VIRTUAL (WALLET DE MONEDITAS)
// ==========================================
Table wallets {
  id int [pk, increment]
  user_id int [ref: - users.id, unique]
  saldo_actual decimal(10,2) [default: 0.00]
  updated_at timestamp
}

// ==========================================
// 5. CAUSA DINOSAURIO (FONDO COMÚN)
// ==========================================
Table causa_comun {
  id int [pk, increment]
  ciclo_id int [ref: > ciclos.id]
  total_acumulado decimal(10,2) [default: 0.00]
  descripcion varchar
  updated_at timestamp
}

// ==========================================
// 6. AUDITORÍA Y TRAZABILIDAD (LIBRO MAYOR)
// ==========================================
Table transacciones {
  id int [pk, increment]
  ciclo_id int [ref: > ciclos.id]
  emisor_id int [ref: > users.id, null] // Null si viene del sistema
  receptor_id int [ref: > users.id, null] // Null si va a la causa dinosaurio
  monto decimal(10,2)
  tipo_operacion varchar // "RECICLAJE", "REPARTO_GRUPAL", "DUELO", "CAUSA_DINOSAURIO", "MINIJUEGO"
  observacion varchar
  created_at timestamp
}

// ==========================================
// 7. MINIJUEGOS INDIVIDUALES (RANKINGS)
// ==========================================
Table minijuegos_puntajes {
  id int [pk, increment]
  user_id int [ref: > users.id]
  juego_nombre varchar
  puntaje int
  created_at timestamp
}
// ==========================================
// CATÁLOGO DE MINIJUEGOS (NUEVA TABLA AUXILIAR)
// ==========================================
Table juegos {
  id int [pk, increment]
  slug varchar [unique, not null] // Identificador único: 'dinosaurio_runner', 'piedra_papel_tijera'
  titulo varchar [not null] // Nombre visual: 'Dino Runner', 'Piedra, Papel o Tijera'
  descripcion text [null]
  costo_ficha decimal(10,2) [default: 0.00] // Costo para jugar si aplica
  activo boolean [default: true] // Para habilitar/deshabilitar el juego
  created_at timestamp
  updated_at timestamp
}

// ==========================================
// REGISTRO DE PUNTAJES Y RÉCORDS
// ==========================================
Table minijuegos_puntajes {
  id int [pk, increment]
  user_id int [ref: > users.id, not null]
  juego_id int [ref: > juegos.id, not null] // Relación directa con la tabla juegos
  puntaje int [not null]
  created_at timestamp
}
